# generator-cmake-qt-cpp

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: npm-publish.yml
generators/app/: index.js
generators/app/templates/: .gitignore  CMakeLists.txt
generators/app/templates/src/: main.cpp  main_window.cpp  main_window.h  mainwindow.ui
